2006-04-15  Ulrich Drepper  <drepper@redhat.com>

	* nis/nss_nisplus/nisplus-hosts.c (_nss_nisplus_parse_hostent):
	Significant cleanups.  Correct adjustment for pointer array.

2006-04-14  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/syscalls.list: Add tee syscall.
	* sysdeps/unix/sysv/linux/Versions: Export tee@GLIBC_2.5.
	* sysdeps/unix/sysv/linux/sparc/bits/fcntl.h: Add prototype for tee.
	* sysdeps/unix/sysv/linux/ia64/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/sh/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/i386/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/s390/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/alpha/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/bits/fcntl.h: Likewise.

	* nis/nss_nisplus/nisplus-ethers.c (_nss_nisplus_parse_etherent):
	Minor cleanups.  NUL terminate name string.

	* nis/Versions: No need to export _nss_nisplus_parse_grent,
	_nss_nisplus_parse_pwent, and _nss_nisplus_parse_spent.

	* nis/nss_nisplus/nisplus-alias.c (_nss_nisplus_parse_aliasent):
	Avoid unnecessary allocation.  Fix adjustment for pointer value.

	* nis/nss_nisplus/nisplus-parser.c: Cleanups, use NIS_RES_*
	macros.  Avoid unnecessary allocation.

	* sysdeps/unix/sysv/linux/sync_file_range.c: New file.

2006-04-13  Ulrich Drepper  <drepper@redhat.com>

	* nis/Makefile (libnsl-routimes): Add nss-default.
	* nis/Versions (libnsl) [GLIBC_PRIVATE]: Export _nsl_default_nss.
	* nis/nss-nis.c: Move /etc/default/nss handling to...
	* nis/nss-default.c: ...here.  New file.
	* nis/libnsl.h: New file.
	* nis/nss-nis.h: Remove NSS_FLAG_* definitions and _nis_default_nss
	plus auxilary definitions.
	* nis/nss_nis/nis-initgroups.c: Use _nsl_default_nss instead of
	_nis_default_nss.
	* nis/nss_nis/nis-service.c: Likewise.

2006-04-07  Steven Munroe  <sjmunroe@us.ibm.com>

	* sysdeps/powerpc/fpu/bits/mathinline.h