@@ -1,7 +1,9 @@
 2006-04-15  Ulrich Drepper  <drepper@redhat.com>
 
-	* nis/nss_nisplus/nisplus-hosts.c (_nss_nisplus_parse_hostent):
+	* nis/nss_nisplus/nisplus-network.c (_nss_nisplus_parse_netent):
 	Significant cleanups.  Correct adjustment for pointer array.
+	* nis/nss_nisplus/nisplus-hosts.c (_nss_nisplus_parse_hostent):
+	Likewise.
 
 2006-04-14  Ulrich Drepper  <drepper@redhat.com>
 
